fix box z-index

--- a/themes/home.css
+++ b/themes/home.css
@@ -393,7 +393,7 @@
 	}
 	.money_list .money_num .hidden_text samp.hover{ background-position:0 -50px; }
 	.money_list .money_num .hidden_text .hidden_text_detail{
-		position:absolute; z-index:3; top:25px; right:-50px; background:#fff; border:1px solid #d4dade; padding:10px; display:none;
+		position:absolute; z-index:101; top:25px; right:-50px; background:#fff; border:1px solid #d4dade; padding:10px; display:none;
 		width:240px; line-height:25px; color:#8c8c8c;
 		-webkit-box-shadow:2px 2px 3px rgba(0,0,0,.1), -2px -2px 3px rgba(0,0,0,.1);
 		   -moz-box-shadow:2px 2px 3px rgba(0,0,0,.1), -2px -2px 3px rgba(0,0,0,.1);
